Delete InvoiceService project.

--- a/InvoiceService/InvoiceService.Web/Views/Home/Index.cshtml
+++ b/InvoiceService/InvoiceService.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using C1.Web.Mvc.Fluent;
-@using InvoiceService
+@using InvoiceService.UseCase
 
 
 @{
@@ -7,7 +7,7 @@
 }
 
 
-@model IEnumerable<InvoiceService.SalesOrder>
+@model IEnumerable<SalesOrder>
 
 <script>
     function selectionChanged(s, e)
