NameやAddressをViewの時点で結合するように変更

--- a/InvoiceService/InvoiceService.Web/Views/Home/Index.cshtml
+++ b/InvoiceService/InvoiceService.Web/Views/Home/Index.cshtml
@@ -33,8 +33,7 @@
           bl.Add(cb => cb.Binding("SalesOrderId"));
           bl.Add(cb => cb.Binding("OrderDate").Format("yyyy/MM/dd"));
           bl.Add(cb => cb.Binding("CompanyName"));
-          bl.Add(cb => cb.Binding("FirstName"));
-          bl.Add(cb => cb.Binding("LastName"));
+          bl.Add(cb => cb.Binding("Name"));
           bl.Add(cb => cb.Binding("DetailCount"));
           bl.Add(cb => cb.Binding("TotalPrice"));
       })
